# semantic-ner-search-demo

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  python-poetry-boilerplate.code-workspace  semantic-ner-search-demo.code-workspace
.github/workflows/: cleanup_notebooks.yml
notebooks/: process_csv_dataset.ipynb  test.ipynb
src/python_poetry_boilerplate/: main.py
src/python_poetry_boilerplate/config/: env.py
src/python_poetry_boilerplate/libs/: my_lib.py
src/semantic_ner_search_demo/: app.py  main.py
src/semantic_ner_search_demo/config/: env.py
tests/: test_my_app.py
